# musync-server

./: CMakeLists.txt  todolist.txt
include/musync/: config_reader.hpp  config_vars.hpp  connection.hpp  connection_manager.hpp  db_link.hpp  lock.hpp  reply.hpp  request.hpp  server.hpp  worker_thread.hpp
include/musync/mysql/: mysql_error.hpp  mysql_link.hpp  queries.hpp
src/: config_reader.cpp  config_vars.cpp  connection.cpp  connection_file_management.cpp  connection_list_files.cpp  connection_manager.cpp  connection_user_management.cpp  db_link.cpp  main.cpp  mysql_error.cpp  mysql_link.cpp  queries.cpp  request.cpp  server.cpp  worker_thread.cpp
